# gemfire-native-client-one-two-way-ssl

./: .gitignore  CMakeLists.txt  UsernamePassword.cpp  UsernamePassword.h  main.cpp  readme.md
etc/: gfsecurity-one-way.properties  gfsecurity-two-way.properties
scripts/: gen_certs.sh  startGemFireOneWaySSL.sh  startGemFireTwoWaySSL.sh
